--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
+    <div id="header">
+      <div class="title">Etch-a-Sketch</div>
+      <button class="clear-btn">Clear</button>
+    </div>
     <div id="etch-grid"></div>
   </body>
 </html>
