mode selection & rainbow mode

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <button class="clear-btn small">Clear</button>
     </div>
     <div id="etch-grid"></div>
+    <div class="mode-options">
+      <button id="colour" class="colour-btn active">Colour</button>
+      <button id="retro" class="retro-btn">Retro</button>
+      <button id="retro-colour" class="retro-colour-btn">Retrocolour</button>
+      <button id="rainbow" class="rainbow-btn">Rainbow</button>
+    </div>
     <div class="form-curtain">
       <div class="form-container">
         <label for="size-input">Grid size (1 - 100):</label>
