brush option functionality: click

--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
         <div class="section-title">Brush Options</div>
         <div class="option-container">
           <label for="hover">Hover</label>
-          <input type="checkbox" id="hover" />
-        </div>
-        <div class="option-container">
-          <label for="click-drag">Click & Drag</label>
-          <input type="checkbox" id="click-drag" />
+          <input type="checkbox" id="hover" checked />
         </div>
         <div class="option-container">
           <label for="click">Click</label>
